Fix: card height and content overflowing

--- a/style.css
+++ b/style.css
@@ -13,8 +13,8 @@
 }
 
 body, html {
-    width: 100vw;
-    height: 100vh;
+    width: 100%;
+    height: 100%;
 }
 
 body {
@@ -28,7 +28,7 @@ body {
 
 .card {
     width: 100%;
-    height: 80%;
+    height: 100%;
     margin: 2em auto;
     display: flex;
     flex-direction: column;
@@ -38,7 +38,7 @@ body {
 
 .img-container {
     width: 100%;
-    height: 30%;
+    height: 100%;
     background: url(images/illustration-hero.svg);
     background-size: cover;
     background-position: center;
@@ -53,12 +53,12 @@ body {
 }
 
 .text-container h1 {
-    font-size: 1.4em;
+    font-size: 1.2em;
     color: var(--Darkblue);
 }
 
 .text-container p {
-    font-size: 16px;
+    font-size: 0.8em;
     margin-top: 1.3em;
     line-height: 1.6em;
     color: var(--Desaturatedblue);
@@ -74,7 +74,7 @@ body {
 }
 
 .plan-text {
-    font-size: 19px;
+    font-size: 0.8em;
     font-weight: bold;
     color: var(--Darkblue);
     margin-left: 15px;
@@ -83,13 +83,14 @@ body {
 .plan-text span {
     display: block;
     font-weight: lighter;
-    font-size: 19px;
+    font-size: 0.8em;
     color: var(--Desaturatedblue);
 }
 
 .plan-change {
     color: var(--Brightblue);  
-    font-size: 18px;  
+    font-size: 0.7em;  
+    font-weight: bold;
     text-decoration: underline var(--Brightblue);
     margin-left: auto;
 }
@@ -101,35 +102,38 @@ body {
     text-align: center;
     margin: 1.4em 1em;
     padding: 0.9em;
-    font-size: 18px;
+    font-size: 0.7em;
     font-weight: bold;
     border-radius: 12px;
-    box-shadow: 0px 18px 3px hsl(225, 100%, 95%);
+    box-shadow: 0px 20px 3px hsl(225, 100%, 95%);
 }
 
 .cancel-btn {
     text-align: center;
-    font-size: 18px;
+    font-size: 0.7em;
     font-weight: bold;
     color: var(--Desaturatedblue);
+    padding-bottom: 1.6rem;
 }
 
 @media screen and (min-width: 768px) {
     body {
         background: url(images/pattern-background-desktop.svg);
-        background-size: contain;
+        background-size: cover;
+        background-position: center;
         background-repeat: no-repeat;
         background-color: var(--Paleblue);
     }
 
     .card {
-        width: 30%;
-        height: 90%;
+        width: fit-content;
+        height: 100%;
+        margin: 1em 10em;
     }
 
     .img-container {
         width: 100%;
-        height: 33%;
+        height: 100%;
         background: url(images/illustration-hero.svg);
         background-size: cover;
         background-position: center;
@@ -141,5 +145,31 @@ body {
     .proceed-btn:hover {
         background-color: var(--Desaturatedblue);
         cursor: pointer;
+    }
+}
+
+@media screen and (min-width: 1000px) {
+    .card {
+        width: fit-content;
+        height: 100%;
+        margin: 1em 15em;
+    }
+
+    .img-container {
+        width: 100%;
+        height: 100%;
+    }
+}
+
+@media screen and (min-width: 1300px) {
+    .card {
+        width: fit-content;
+        height: 100%;
+        margin: 1em 20em;
+    }
+
+    .img-container {
+        width: 100%;
+        height: 100%;
     }
 }
